# oil_segmentation

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/experiments/: 1. Simple methods. Small data.ipynb  1. Simple methods.ipynb  2. Unet. Small data.ipynb  2.1. Unet. Small data.ipynb  2.2. Unet. Big data.ipynb  4. YoloV8.ipynb  4.1 YOLOV8 train.ipynb  4.2 YOLOV8 Valid.ipynb  feature_extractor.py  metrics.py  plots.py  unet_dataset.py
notebooks/image_stitching/: Image stitching from video.ipynb  image_slicing.py  read_video.py
src/: gui.py  main.py  read_video.py
src/configs/: oil_seg_config.py
src/handlers/: recognition.py
src/infrastructure/: image_slicing.py  read_video.py  segmentation.py
src/service/: recognition.py
src/templates/: index.html  result.html  segm_results.html  upload_file.html
src/weights/: best.pth
